
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <TextView
             android:id="@+id/TextViewBacklight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"             
             android:layout_centerHorizontal="true"
             android:textSize="30sp"
             android:textColor="#FF00FF00"
      
             android:text="@string/main2e2promtitle" />
 	 <LinearLayout
         android:id="@+id/linearLayoutWriteE2prom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
       	 android:layout_centerInParent="true"   
	     android:orientation="horizontal" >
	     <EditText
         android:id="@+id/editTextWriteE2prom"
         android:layout_width="240px"
         android:layout_height="80px"  
         android:ems="10" />

         <Button
         android:id="@+id/buttonWriteE2prom"
         android:layout_width="120px"
         android:layout_height="80px"         
         android:text="@string/main2e2promwrite" />
     </LinearLayout>

     <LinearLayout
         android:id="@+id/linearLayoutReadE2prom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"         
		 android:layout_below="@+id/linearLayoutWriteE2prom"  
		 android:layout_alignLeft="@+id/linearLayoutWriteE2prom"     
         android:orientation="horizontal" >
     	<EditText
         android:id="@+id/editTextReadE2prom"
         android:layout_width="240px"
         android:layout_height="80px"  
         android:ems="10" />

         <Button
         android:id="@+id/buttonReadE2prom"
         android:layout_width="120px"
         android:layout_height="80px"         
         android:text="@string/main2e2promread" />
     </LinearLayout>   
	<Button
        android:id="@+id/buttonreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/stytlereturn"
        />
</RelativeLayout>