
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    

    
    <LinearLayout
         android:id="@+id/linearLayoutSendReceText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
       	 android:layout_centerInParent="true" 
	     android:orientation="vertical" >
    
    <EditText
 	    android:id="@+id/editTextRece"
 	    android:layout_width="380px"
 	    android:layout_height="240px"
 	    android:ems="10"
 	    android:inputType="textMultiLine" >

 	    <requestFocus />
 	</EditText>
     <EditText
 	    android:id="@+id/editTextSend"
 	    android:layout_width="380px"
 	    android:layout_height="150px"
 	    android:ems="10"
 	    android:inputType="textMultiLine" >

 	    <requestFocus />
 	</EditText>   

</LinearLayout>
<TextView
            android:id="@+id/textViewReceIndicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/linearLayoutSendReceText"
            android:layout_alignTop="@+id/linearLayoutSendReceText"
            android:text="@string/main2serialrecetext" />
<TextView
            android:id="@+id/textViewSendIndicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/linearLayoutSendReceText"
            android:layout_alignBottom="@+id/linearLayoutSendReceText"
            android:text="@string/main2serialsendtext" />
<CheckBox
            android:id="@+id/hexcheckboxsend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_above="@+id/textViewSendIndicate"
            android:layout_toRightOf="@+id/linearLayoutSendReceText"      
            android:text="@string/main2serialhex" />
<CheckBox
            android:id="@+id/hexcheckboxrece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@+id/textViewReceIndicate"
            android:layout_toRightOf="@+id/linearLayoutSendReceText"      
            android:text="@string/main2serialhex" />
<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/linearLayoutSendReceText"
            android:layout_alignBottom="@+id/linearLayoutSendReceText"
            android:text="@string/main2serialsendtext" />
<Button
         android:id="@+id/buttonOpen"
         android:layout_width="110px"
         android:layout_height="75px"        
         android:layout_above="@+id/buttonSend"
         android:layout_alignLeft="@+id/buttonSend"
         android:text="@string/main2serialopenbutton" />
<Button
         android:id="@+id/buttonSend"
         android:layout_width="120px"
         android:layout_height="75px"        
         android:layout_toLeftOf="@+id/linearLayoutSendReceText"
         android:layout_alignBottom="@+id/linearLayoutSendReceText"
         android:text="@string/main2serialsendbutton" />

<Button
         android:id="@+id/buttonClearReceText"
         android:layout_width="120px"
         android:layout_height="75px"        
         android:layout_toRightOf="@+id/linearLayoutSendReceText"
         android:layout_centerVertical="true"
         android:text="@string/main2serialclearrecebutton" />
    <Spinner
        android:id="@+id/spinnerComNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignTop="@+id/linearLayoutSendReceText"     
        android:layout_toLeftOf="@+id/linearLayoutSendReceText"/>
  
     <Spinner
        android:id="@+id/spinnerbaute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignLeft="@+id/spinnerComNumber"     
        android:layout_below="@+id/spinnerComNumber"/>
     
      <Spinner
        android:id="@+id/spinnerparitybit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignLeft="@+id/spinnerbaute"     
        android:layout_below="@+id/spinnerbaute"/>
     
       <Spinner
        android:id="@+id/spinnerdatabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignLeft="@+id/spinnerparitybit"     
        android:layout_below="@+id/spinnerparitybit"/>
     
        <Spinner
        android:id="@+id/spinnerstopbit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignLeft="@+id/spinnerdatabit"     
        android:layout_below="@+id/spinnerdatabit"/>
       
	<Button
        android:id="@+id/buttonreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/stytlereturn"
        />
           <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:layout_centerInParent="true"
        android:textSize="30sp"
        android:textColor="#FF00FF00">
         </TextView>  

</RelativeLayout>